antlr4-http/src/main/java/com/example/HttpParser.java
// Generated from E:/java_project/antlr4Test/antlr4-http\Http.g4 by ANTLR 4.10.1
package com.example;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HttpParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		SP=10, ALPHA=11, DIGIT=12, Pct_encoded=13, HEXDIG=14, LColumn=15, RColumn=16, 
		SemiColon=17, Equals=18, Period=19, CRLF=20, Minus=21, Dot=22, Underscore=23, 
		Tilde=24, QuestionMark=25, Slash=26, ExclamationMark=27, Colon=28, At=29, 
		DollarSign=30, Hashtag=31, Ampersand=32, Percent=33, SQuote=34, Star=35, 
		Plus=36, Caret=37, BackQuote=38, VBar=39, OWS=40, HTAB=41, VCHAR=42, OBS_TEXT=43, 
		CHINESE=44;
	public static final int
		RULE_http_messages = 0, RULE_http_message = 1, RULE_start_line = 2, RULE_request_line = 3, 
		RULE_method = 4, RULE_request_target = 5, RULE_origin_form = 6, RULE_absolute_path = 7, 
		RULE_query = 8, RULE_http_version = 9, RULE_http_name = 10, RULE_header_field = 11, 
		RULE_field_name = 12, RULE_token = 13, RULE_field_value = 14, RULE_field_content = 15, 
		RULE_field_vchar = 16, RULE_obs_text = 17, RULE_obs_fold = 18, RULE_urlchar = 19, 
		RULE_pchar = 20, RULE_unreserved = 21, RULE_sub_delims = 22, RULE_tchar = 23, 
		RULE_vCHAR = 24, RULE_message_body = 25, RULE_comment = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"http_messages", "http_message", "start_line", "request_line", "method", 
			"request_target", "origin_form", "absolute_path", "query", "http_version", 
			"http_name", "header_field", "field_name", "token", "field_value", "field_content", 
			"field_vchar", "obs_text", "obs_fold", "urlchar", "pchar", "unreserved", 
			"sub_delims", "tchar", "vCHAR", "message_body", "comment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'GET'", "'HEAD'", "'POST'", "'PUT'", "'DELETE'", "'CONNECT'", 
			"'OPTIONS'", "'TRACE'", "'HTTP/'", "' '", null, null, null, null, "'('", 
			"')'", "';'", "'='", "','", null, "'-'", "'.'", "'_'", "'~'", "'?'", 
			"'/'", "'!'", "':'", "'@'", "'$'", "'#'", "'&'", "'%'", "'''", "'*'", 
			"'+'", "'^'", "'`'", "'|'", null, "'\\t'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, "SP", "ALPHA", 
			"DIGIT", "Pct_encoded", "HEXDIG", "LColumn", "RColumn", "SemiColon", 
			"Equals", "Period", "CRLF", "Minus", "Dot", "Underscore", "Tilde", "QuestionMark", 
			"Slash", "ExclamationMark", "Colon", "At", "DollarSign", "Hashtag", "Ampersand", 
			"Percent", "SQuote", "Star", "Plus", "Caret", "BackQuote", "VBar", "OWS", 
			"HTAB", "VCHAR", "OBS_TEXT", "CHINESE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Http.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HttpParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Http_messagesContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(HttpParser.EOF, 0); }
		public List<Http_messageContext> http_message() {
			return getRuleContexts(Http_messageContext.class);
		}
		public Http_messageContext http_message(int i) {
			return getRuleContext(Http_messageContext.class,i);
		}
		public Http_messagesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_http_messages; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).enterHttp_messages(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).exitHttp_messages(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HttpVisitor ) return ((HttpVisitor<? extends T>)visitor).visitHttp_messages(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Http_messagesContext http_messages() throws RecognitionException {
		Http_messagesContext _localctx = new Http_messagesContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_http_messages);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(54);
				http_message();
				}
				}
				setState(57); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << CRLF) | (1L << Hashtag))) != 0) );
			setState(59);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Http_messageContext extends ParserRuleContext {
		public Start_lineContext start_line() {
			return getRuleContext(Start_lineContext.class,0);
		}
		public List<TerminalNode> CRLF() { return getTokens(HttpParser.CRLF); }
		public TerminalNode CRLF(int i) {
			return getToken(HttpParser.CRLF, i);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public List<Header_fieldContext> header_field() {
			return getRuleContexts(Header_fieldContext.class);
		}
		public Header_fieldContext header_field(int i) {
			return getRuleContext(Header_fieldContext.class,i);
		}
		public Message_bodyContext message_body() {
			return getRuleContext(Message_bodyContext.class,0);
		}
		public Http_messageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_http_message; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).enterHttp_message(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).exitHttp_message(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HttpVisitor ) return ((HttpVisitor<? extends T>)visitor).visitHttp_message(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Http_messageContext http_message() throws RecognitionException {
		Http_messageContext _localctx = new Http_messageContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_http_message);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CRLF || _la==Hashtag) {
				{
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==CRLF) {
					{
					{
					setState(61);
					match(CRLF);
					}
					}
					setState(66);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(67);
				comment();
				setState(68);
				match(CRLF);
				}
			}

			setState(72);
			start_line();
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ALPHA) | (1L << DIGIT) | (1L << Minus) | (1L << Dot) | (1L << Underscore) | (1L << Tilde) | (1L << ExclamationMark) | (1L << DollarSign) | (1L << Hashtag) | (1L << Ampersand) | (1L << Percent) | (1L << SQuote) | (1L << Star) | (1L << Plus) | (1L << Caret) | (1L << BackQuote) | (1L << VBar))) != 0)) {
				{
				{
				setState(73);
				header_field();
				setState(74);
				match(CRLF);
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(81);
			match(CRLF);
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(82);
				message_body();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Start_lineContext extends ParserRuleContext {
		public Request_lineContext request_line() {
			return getRuleContext(Request_lineContext.class,0);
		}
		public Start_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).enterStart_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).exitStart_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HttpVisitor ) return ((HttpVisitor<? extends T>)visitor).visitStart_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Start_lineContext start_line() throws RecognitionException {
		Start_lineContext _localctx = new Start_lineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_start_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			request_line();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Request_lineContext extends ParserRuleContext {
		public MethodContext method() {
			return getRuleContext(MethodContext.class,0);
		}
		public List<TerminalNode> SP() { return getTokens(HttpParser.SP); }
		public TerminalNode SP(int i) {
			return getToken(HttpParser.SP, i);
		}
		public Request_targetContext request_target() {
			return getRuleContext(Request_targetContext.class,0);
		}
		public TerminalNode CRLF() { return getToken(HttpParser.CRLF, 0); }
		public Http_versionContext http_version() {
			return getRuleContext(Http_versionContext.class,0);
		}
		public Request_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_request_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).enterRequest_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).exitRequest_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HttpVisitor ) return ((HttpVisitor<? extends T>)visitor).visitRequest_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Request_lineContext request_line() throws RecognitionException {
		Request_lineContext _localctx = new Request_lineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_request_line);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			method();
			setState(88);
			match(SP);
			setState(89);
			request_target();
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SP) {
				{
				setState(90);
				match(SP);
				setState(91);
				http_version();
				}
			}

			setState(94);
			match(CRLF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodContext extends ParserRuleContext {
		public MethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).enterMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).exitMethod(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HttpVisitor ) return ((HttpVisitor<? extends T>)visitor).visitMethod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodContext method() throws RecognitionException {
		MethodContext _localctx = new MethodContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_method);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Request_targetContext extends ParserRuleContext {
		public Origin_formContext origin_form() {
			return getRuleContext(Origin_formContext.class,0);
		}
		public Request_targetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_request_target; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).enterRequest_target(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).exitRequest_target(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HttpVisitor ) return ((HttpVisitor<? extends T>)visitor).visitRequest_target(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Request_targetContext request_target() throws RecognitionException {
		Request_targetContext _localctx = new Request_targetContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_request_target);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			origin_form();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Origin_formContext extends ParserRuleContext {
		public Absolute_pathContext absolute_path() {
			return getRuleContext(Absolute_pathContext.class,0);
		}
		public TerminalNode QuestionMark() { return getToken(HttpParser.QuestionMark, 0); }
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public Origin_formContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_origin_form; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).enterOrigin_form(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).exitOrigin_form(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HttpVisitor ) return ((HttpVisitor<? extends T>)visitor).visitOrigin_form(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Origin_formContext origin_form() throws RecognitionException {
		Origin_formContext _localctx = new Origin_formContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_origin_form);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			absolute_path();
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==QuestionMark) {
				{
				setState(101);
				match(QuestionMark);
				setState(102);
				query();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Absolute_pathContext extends ParserRuleContext {
		public List<UrlcharContext> urlchar() {
			return getRuleContexts(UrlcharContext.class);
		}
		public UrlcharContext urlchar(int i) {
			return getRuleContext(UrlcharContext.class,i);
		}
		public Absolute_pathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_absolute_path; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).enterAbsolute_path(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).exitAbsolute_path(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HttpVisitor ) return ((HttpVisitor<? extends T>)visitor).visitAbsolute_path(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Absolute_pathContext absolute_path() throws RecognitionException {
		Absolute_pathContext _localctx = new Absolute_pathContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_absolute_path);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ALPHA) | (1L << DIGIT) | (1L << Pct_encoded) | (1L << LColumn) | (1L << RColumn) | (1L << SemiColon) | (1L << Equals) | (1L << Period) | (1L << Minus) | (1L << Dot) | (1L << Underscore) | (1L << Tilde) | (1L << Slash) | (1L << ExclamationMark) | (1L << Colon) | (1L << At) | (1L << DollarSign) | (1L << Ampersand) | (1L << SQuote) | (1L << Star) | (1L << Plus) | (1L << CHINESE))) != 0)) {
				{
				{
				setState(105);
				urlchar();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public List<PcharContext> pchar() {
			return getRuleContexts(PcharContext.class);
		}
		public PcharContext pchar(int i) {
			return getRuleContext(PcharContext.class,i);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).exitQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HttpVisitor ) return ((HttpVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ALPHA) | (1L << DIGIT) | (1L << Pct_encoded) | (1L << LColumn) | (1L << RColumn) | (1L << SemiColon) | (1L << Equals) | (1L << Period) | (1L << Minus) | (1L << Dot) | (1L << Underscore) | (1L << Tilde) | (1L << QuestionMark) | (1L << Slash) | (1L << ExclamationMark) | (1L << Colon) | (1L << At) | (1L << DollarSign) | (1L << Ampersand) | (1L << SQuote) | (1L << Star) | (1L << Plus) | (1L << CHINESE))) != 0)) {
				{
				{
				setState(111);
				pchar();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Http_versionContext extends ParserRuleContext {
		public Http_nameContext http_name() {
			return getRuleContext(Http_nameContext.class,0);
		}
		public List<TerminalNode> DIGIT() { return getTokens(HttpParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(HttpParser.DIGIT, i);
		}
		public TerminalNode Dot() { return getToken(HttpParser.Dot, 0); }
		public Http_versionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_http_version; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).enterHttp_version(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).exitHttp_version(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HttpVisitor ) return ((HttpVisitor<? extends T>)visitor).visitHttp_version(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Http_versionContext http_version() throws RecognitionException {
		Http_versionContext _localctx = new Http_versionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_http_version);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			http_name();
			setState(118);
			match(DIGIT);
			setState(119);
			match(Dot);
			setState(120);
			match(DIGIT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Http_nameContext extends ParserRuleContext {
		public Http_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_http_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).enterHttp_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HttpListener ) ((HttpListener)listener).exitHttp_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HttpVisitor ) return ((HttpVisitor<? extends T>)visitor).visitHttp_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Http_nameContext http_name() throws RecognitionException {
		Http_nameContext _localctx = new Http_nameContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_http_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
